--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
-@import "../css/root.css";
-@import "../css/header&footer.css";
-@import "../css/utlity.css";
+@import "/css/root.css";
+@import "/css/header&footer.css";
+@import "/css/utlity.css";
+@import "/css/home.css";
+@import "/css/blog.css"
