--- a/css/utlity.css
+++ b/css/utlity.css
@@ -1,3 +1,11 @@
+/* container */
+.container {
+  max-width: 110rem;
+  margin: auto;
+  padding: 4rem 0;
+
+}
+
 /* buttons */
 .btn {
   display: inline-block;
