--- a/css/home.css
+++ b/css/home.css
@@ -1,87 +1,17 @@
+/* grid  */
+#grid-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 3rem;
+}
+
 /* header area */
 .page-header {
   background: url("../img/hero.jpg") no-repeat center center/cover;
   height: 100vh;
   position: relative;
   color: #fff;
-  overflow: hidden;
-}
-
-.page-header * {
-  z-index: 10;
-}
-
-.page-header .nav-container,
-.blog-header .nav-container {
-  display: flex;
-  padding: 0 3rem;
-}
-
-.page-header nav,
-.blog-header nav {
-  width: 100%;
-  color: #fff;
-  height: 70px;
-  margin-top: 0;
-}
-
-.page-header nav ul,
-.blog-header nav ul {
-  display: flex;
-  height: inherit;
-  list-style-type: none;
-  align-items: center;
-  justify-content: space-around;
-  text-align: center;
-}
-
-.page-header nav ul *:nth-child(2) {
-  margin-left: auto;
-}
-
-.page-header nav ul:first-child {
-  margin-left: 5rem;
-}
-
-.page-header nav ul a,
-#footer nav ul a,
-.blog-header nav ul a {
-  text-decoration: none;
-  padding: 1.4rem;
-  color: #fff;
-  font-size: 1.5rem;
-}
-
-.page-header nav ul a:hover,
-.blog-header nav ul a:hover {
-  border-bottom: 2px solid var(--primary-color);
-}
-
-.page-header::before {
-  content: " ";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-  width: 100%;
-  height: 100%;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 0.5rem;
-}
-
-.logo img {
-  width: 3.5rem;
-  height: 3.5rem;
-  border-radius: 50%;
-}
-
-.current {
-  border-bottom: 2px solid var(--primary-color);
+  grid-column: 1/ 13;
 }
 
 .header-content {
@@ -95,55 +25,246 @@
 }
 
 .header-content h1 {
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 .header-content p {
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin: 0.5rem 0 2rem;
   max-width: 60rem;
 }
 
-.header-content i {
-  text-align: center;
-  padding-right: 0.2rem;
+.header-content a {
+  padding: 1rem 3rem;
+  border-radius: 8px;
+  font-size: 1rem;
 }
 
-/* showcase area*/
-#grid-container {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: auto 1fr auto;
-  gap: 5rem;
+.page-header .nav-container,
+.blog-header .nav-container {
+  padding: 0.5rem 3rem;
+  background: #000;
+  color: #fff;
+  width: 100%;
+  height: 70px;
 }
 
-/* page grid */
-.page-header,
-.blog-header {
-  grid-column: 1/ span 13;
+.nav-container ul .list-items {
+  width: auto;
+  margin: 0 1.5rem;
+  position: relative;
 }
 
-#showcase-area {
-  grid-column: 1/ span 10;
+.nav-container ul .list-items ::after {
+  position: absolute;
+  content: "";
+  background: var(--secondary-color);
+  height: 2px;
+  width: 100%;
+  left: 0;
+  bottom: 1px;
+  opacity: 0;
+  transition: all 0.2s linear;
+}
+
+.nav-container .logo {
+  flex: 1;
+}
+
+.logo img {
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  margin-top: 1rem;
+}
+
+.nav-container ul .current {
+  border-bottom: 2px solid var(--primary-color);
+}
+
+.menu-container {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  background: #000;
+  width: 100%;
+}
+
+.menu-container .toggler {
+  position: absolute;
+  top: 5px;
+  right: 20px;
+  cursor: pointer;
+  z-index: 2;
+  width: 40px;
+  height: 40px;
+  opacity: 0;
+}
+
+.menu-container .hamburger {
+  position: absolute;
+  top: 5px;
+  right: 20px;
+  z-index: 1;
+  width: 50px;
+  height: 50px;
+  padding: 1rem;
   display: flex;
-  margin-left: 5rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-list-wrap {
+  display: none;
+}
+
+/* hamburger line */
+.menu-container .hamburger div {
+  display: flex;
+  position: relative;
+  flex: none;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.4s ease-in;
+}
+
+/* hamburger top and bottom lines */
+.menu-container .hamburger>div::before,
+.menu-container .hamburger>div::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: -10px;
+  width: 100%;
+  height: 2px;
+  background: inherit;
+}
+
+/* Makes before and after line to be at separate positions top and bottom */
+.menu-container .hamburger>div::after {
+  top: 10px;
+}
+
+/* toggler animation */
+.menu-container .toggler:checked+.hamburger>div {
+  transform: rotate(135deg);
+}
+
+/* forming an X sign for closing*/
+.menu-container .toggler:checked+.hamburger>div::before,
+.menu-container .toggler:checked+.hamburger>div::after {
+  transform: rotate(90deg);
+  top: 0;
+}
+
+.menu-container .toggler:checked:hover+.hamburger>div {
+  transform: rotate(225deg);
+}
+
+.menu-container .menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* show menu*/
+.menu-container .toggler:checked~.menu {
+  visibility: visible;
+}
+
+.menu-container .toggler:checked~.menu .menu-list-overlay {
+  transform: scale(1);
+  transition-duration: 1s;
+}
+
+.menu-container .toggler:checked~.menu .menu-list-overlay div {
+  opacity: 1;
+  transition: opacity 0.4s ease 0.4s;
+  padding-bottom: 20rem;
+}
+
+.menu-container .menu .menu-list-overlay {
+  width: 200vw;
+  height: 200vw;
+  border-radius: 50%;
+  display: flex;
+  flex: none;
+  justify-content: center;
+  align-items: center;
+  transform: scale(0);
+  transition: all 0.4s ease;
+  background: rgba(2, 12, 200, 0.5)
+}
+
+.menu-list-overlay>div {
+  text-align: center;
+  max-width: 90vw;
+  max-height: 100vh;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+
+.menu-list-overlay>div ul a,
+#footer .menu-list-overlay ul a,
+.blog-header .menu-list-overlay ul a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.8rem;
+  transition: color 0.5s ease;
+}
+
+.menu-list-overlay>div ul a:hover,
+#footer .menu-list-overlay>div ul a:hover,
+.blog-header .menu-list-overlay>div ul a:hover {
+  color: #ccc;
+}
+
+/* main area */
+#showcase-area {
+  grid-column: 1/10;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  gap: 2rem;
+  margin: 0 2rem;
+  padding-left: 6rem;
 }
 
 .showcase-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, auto);
   gap: 2rem;
-}
-
-/* main */
-.showcase h2 {
-  font-size: 2.5rem;
 }
 
 .card {
   display: flex;
   flex-direction: column;
   position: relative;
+}
+
+.card-category {
+  border-radius: 0;
+  background-color: var(--primary-color);
+  color: #fff;
+  padding: 0.1rem 1rem;
+  position: absolute;
+  top: 2px;
+}
+
+.card-img img {
+  height: 450px;
 }
 
 .card-img a,
@@ -155,66 +276,40 @@
 .card-img figcaption {
   color: #000;
   font-size: 1.5rem;
+  font-weight: 600;
   text-transform: capitalize;
   padding: 1rem 0 .5rem;
 }
 
-.card img {
-  height: 450px;
-  max-height: 100%;
-  width: 100%;
-}
-
-.card-category {
-  border-radius: 0;
-  background-color: var(--primary-color);
-  color: #fff;
-  padding: 0.5rem 2rem;
-  position: absolute;
-  top: 2px;
-}
-
-/*Styles in the aside area */
 .side-notification {
-  grid-column: 11/ span 3;
-  background-color: var(--secondary-color);
-  height: 30%;
-  margin-top: 4rem;
+  grid-column: 10/ 13;
+  background-color: #fff;
+  display: grid;
+  grid-template-rows: repeat(3, auto);
+  gap: 2rem;
+  margin-top: 6rem;
 }
 
 .aside-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
-}
-
-.most-viewed,
-.contact {
-  padding: 2rem;
+  background: var(--secondary-color);
+  padding: 1.5rem;
 }
 
 .aside-container ul,
-.footer-list .ul {
+.nav-container .footer-list ul,
+.nav-container .socials ul {
   list-style: none;
 }
 
-.aside-container ul li {
-  padding: 0.5rem;
+.aside-container .most-viewed ul li {
   cursor: pointer;
-}
-
-.aside-container ul:last-child {
-  border-bottom: 1px solid #731228;
-  padding: 1rem 0;
-}
-
-.aside-container form {
-  margin: 1rem 0;
-  text-align: center;
+  margin-bottom: 0.5rem;
 }
 
 .aside-container input {
-  width: 80%;
+  width: 90%;
   padding: 1rem 0;
   margin: 0.5rem 0;
   text-align: center;
@@ -222,253 +317,88 @@
   border: 1px solid #ccc;
 }
 
-/* contact division in the aside menu */
-.contact {
-  margin: 5rem 0;
-  background: var(--secondary-color);
-}
-
-.contact h2,
-.most-viewed h2,
-.about h2 {
-  color: #731228;
-}
-
-.contact ul li {
-  font-size: 1.1rem;
-  text-transform: lowercase;
+.aside-container .contact ul li,
+#footer .socials ul li i {
+  padding: 0.5rem;
   cursor: pointer;
 }
 
 .contact i {
   padding: 0.5rem 1rem;
-  font-size: 2rem;
   color: #2b2b2b;
 }
 
-/* about division in the Aside */
-.about p {
-  line-height: 1.5rem;
-  padding: 1rem;
-}
-
-/* footer */
 #footer {
-  grid-column: 1/ span 13;
-  background: var(--dark-color);
-  padding: 3rem;
-  color: #fff;
+  grid-column: 1/13;
 }
 
 #footer .nav-container {
-  display: flex;
-}
-
-#footer .nav-container .socials {
-  margin-left: auto;
-}
-
-#footer .nav-container .socials ul {
-  display: flex;
-  list-style: none;
-}
-
-#footer .nav-container .socials ul li {
-  padding: 0 1.5rem;
-  text-align: center;
-}
-
-#footer .nav-container .socials ul li i {
-  padding: 0 1rem;
-  font-size: 2rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  background: var(--dark-color);
+  padding: 3rem 0;
   color: #fff;
-  cursor: pointer;
 }
 
-#footer p {
-  text-align: center;
-  margin: 0 auto;
+#footer .socials ul {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+#footer .socials ul li,
+#footer .footer-list a {
+  margin: 0 1rem;
+  padding: 1rem;
+  text-decoration: none;
+  color: var(--secondary-color);
   font-size: 1.2rem;
 }
 
-/* tablet media query */
-@media screen and (max-width:1024px) {
-  #grid-container {
-    gap: 3rem;
-    grid-template-rows: auto 1fr auto;
-  }
+#footer p {
+  font-size: 1.2rem;
+  grid-column: 1/3;
+  padding-left: 2rem;
+}
+
+@media all and (max-width:900px) {
 
   #showcase-area {
-    grid-column: 1/ span 13;
-    margin: 0 3rem;
-  }
-
-  .showcase-container {
-    gap: 2rem;
+    grid-column: 1/13;
+    gap: 1rem;
+    padding: 2rem;
   }
 
   .side-notification {
-    grid-column: 1/ span 13;
-    height: 50%;
-    grid-row-start: 3;
-    display: flex;
-    flex-wrap: wrap;
+    grid-column: 1/ 13;
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  .aside-container {
-    height: fit-content;
-    width: 50%;
-    border-right: 1px solid wheat;
+  .side-notification .about-wrap {
+    grid-column: 1/ 3;
   }
-
-  .aside-container:last-of-type {
-    width: 100%;
-    margin-top: 1rem;
-  }
-
-  .contact {
-    margin: 0;
-  }
-
-  .contact ul li {
-    padding-bottom: 1.2rem;
-  }
-
-  .contact h2,
-  .most-viewed h2,
-  .about h2 {
-    font-size: 2.5rem;
-  }
-
-  .page-header .btn {
-    border-radius: 0.5rem;
-  }
-
-  .about h2 {
-    text-align: center;
-  }
-
-  .logo img {
-    width: 5rem;
-    height: 5rem;
-  }
-
-  .page-header nav ul a,
-  #footer nav ul a,
-  .blog-header nav ul a {
-    font-size: 2rem;
-  }
-
 }
 
-/* mobile media query */
-@media screen and (max-width: 600px) {
 
-  body {
-    min-width: 600px;
-  }
-
-  #grid-container {
-    grid-template-rows: auto 1fr auto;
-    gap: 1rem;
-  }
-
-  .page-header nav ul a,
-  #footer nav ul a,
-  .blog-header nav ul a {
-    font-size: 1.6rem;
-  }
-
-  .page-header .btn {
-    padding: 1rem 2.5rem;
-  }
-
-  .header-content h1 {
-    font-size: 2.5rem;
-  }
-
-  .header-content p {
-    font-size: 1.5rem;
-  }
+@media all and (max-width:480px) {
 
   #showcase-area {
-    grid-column: 1/ span 12;
-    margin-left: 3rem;
-  }
-
-  #showcase-area {
-    grid-column: 1/ span 16;
+    margin-right: 2rem;
   }
 
   .showcase-container {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 1rem;
-  }
-
-  .page-header,
-  .blog-header {
-    grid-column: 1/ span 16;
   }
 
   .side-notification {
-    grid-column: 1/ span 16;
-    height: 50%;
+    grid-column: 1/ 13;
+    grid-template-columns: 1fr;
   }
 
-  #footer {
-    grid-column: 1/ span 16;
-    padding: 0.5rem 0;
+  .side-notification .about-wrap {
+    grid-column: 1;
   }
 
-  #footer p {
-    font-size: 1rem;
-  }
-
-  #footer .nav-container .socials ul li {
-    padding: 0 0.5rem;
-  }
-}
-
-/* media for small phones */
-@media screen and (max-width:480px) {
-
-  .page-header nav ul a,
-  #footer nav ul a,
-  .blog-header nav ul a {
-    font-size: 1.8rem;
-  }
-
-  .header-content h1 {
-    font-size: 3rem;
-  }
-
-  .header-content p {
-    font-size: 1.8rem;
-  }
-
-  .page-header .btn {
-    font-size: 1.8rem;
-  }
-
-  .showcase h2 {
-    font-size: 3rem;
-  }
-
-  .card-category {
-    font-size: 1.7rem;
-  }
-
-  .card-img figcaption {
-    font-size: 2rem;
-  }
-
-  .aside-container ul li {
-    font-size: 1.7rem;
-  }
-
-  .about p {
-    line-height: unset;
-    font-size: 1.7rem;
-  }
 }
