--- a/css/root.css
+++ b/css/root.css
@@ -13,6 +13,7 @@ body {
   font-family: "Barlow", sans-serif;
   line-height: 1.5;
   background-color: var(--light-color);
+  font-size: 1.6rem;
 }
 
 * {
